[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui_elements/fonts/Open_Sans/open_sans_extra_bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/ui_elements/fonts/Open_Sans/open_sans_normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/scenes/content/modules/Module1/Welded_C.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scripts/functions/Module1/connection_selection.gd" type="Script" id=4]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Welded_C:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Welded_C"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Welded_C:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Environment" id=6]
ambient_light_color = Color( 0.105882, 0.0941176, 0.0941176, 1 )

[node name="ConnectionSelection" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/Welded_C = SubResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0

[node name="VBoxContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 603.0
margin_top = 284.0
margin_right = 1303.0
margin_bottom = 782.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Welded_C" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 384.0

[node name="SelectedConnection" type="Label" parent="CenterContainer/VBoxContainer"]
margin_left = 388.0
margin_top = 194.0
margin_right = 700.0
margin_bottom = 239.0
custom_fonts/font = ExtResource( 2 )
text = "Selected Connection:"

[node name="Connection" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 437.0
margin_right = 384.0
margin_bottom = 498.0
custom_fonts/font = ExtResource( 1 )

[node name="Others" type="Spatial" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Others"]
environment = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="Others"]
transform = Transform( 1, -4.89239e-09, -1.40751e-08, 1.49012e-08, 0.328323, 0.944566, 0, -0.944566, 0.328323, 0, 2.96046, 2.19331 )

[connection signal="gui_input" from="CenterContainer/VBoxContainer/Welded_C" to="." method="_on_Welded_C_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Welded_C" to="." method="_on_Welded_C_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Welded_C" to="." method="_on_Welded_C_mouse_exited"]
